quickly fix additional library directories

--- a/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
+++ b/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
@@ -112,7 +112,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(PROJECTDIR)\SDL</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(PROJECTDIR)SDL</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
