--- a/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
+++ b/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
@@ -150,6 +150,9 @@
   <ItemGroup>
     <ClInclude Include="Constants.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Images\test.bmp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
