--- a/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj.filters
+++ b/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Images\test.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
