implemented new sounds
also shifted the music player into the game screens.

--- a/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
+++ b/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
@@ -193,6 +193,7 @@
   <ItemGroup>
     <Media Include="Music\Mario.mp3" />
     <Media Include="Music\MarioUnderworld.mp3" />
+    <Media Include="Sound\contact_kill.wav" />
     <Media Include="Sound\player_jump.mp3" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
