--- a/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj.filters
+++ b/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj.filters
@@ -158,5 +158,8 @@
     <Media Include="Sound\player_jump.mp3">
       <Filter>Resource Files\sounds</Filter>
     </Media>
+    <Media Include="Sound\contact_kill.wav">
+      <Filter>Resource Files\sounds</Filter>
+    </Media>
   </ItemGroup>
 </Project>
