--- a/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
+++ b/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="GameScreenManager.cpp" />
     <ClCompile Include="GameScreen.cpp" />
     <ClCompile Include="GameScreenLevel1.cpp" />
+    <ClCompile Include="GameScreenMenu.cpp" />
     <ClCompile Include="Koopa.cpp" />
     <ClCompile Include="LevelMap.cpp" />
     <ClCompile Include="Luigi.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="GameScreenManager.h" />
     <ClInclude Include="GameScreen.h" />
     <ClInclude Include="GameScreenLevel1.h" />
+    <ClInclude Include="GameScreenMenu.h" />
     <ClInclude Include="Koopa.h" />
     <ClInclude Include="LevelMap.h" />
     <ClInclude Include="Luigi.h" />
