--- a/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
+++ b/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Collisions.cpp" />
+    <ClCompile Include="GameScreenLevel2.cpp" />
     <ClCompile Include="GameScreenManager.cpp" />
     <ClCompile Include="GameScreen.cpp" />
     <ClCompile Include="GameScreenLevel1.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="Collisions.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Commons.h" />
+    <ClInclude Include="GameScreenLevel2.h" />
     <ClInclude Include="GameScreenManager.h" />
     <ClInclude Include="GameScreen.h" />
     <ClInclude Include="GameScreenLevel1.h" />
@@ -187,6 +189,7 @@
     <Image Include="Images\entity\Mario.png" />
     <Image Include="Images\item\Coin.png" />
     <Image Include="Images\level\BackgroundMB.png" />
+    <Image Include="Images\level\SuperMarioBrosMap1-1.png" />
     <Image Include="Images\test.bmp" />
     <Image Include="Images\tile\PowBlock.png" />
   </ItemGroup>
