implement destructible block
included organization of code for setting up assets inside a level for readability sake.

has an issue where blocks in different positions do not erase properly.

--- a/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
+++ b/PlatformerMario/PlatformerMario/PlatformerMario.vcxproj
@@ -193,6 +193,7 @@
     <Image Include="Images\level\BackgroundMB.png" />
     <Image Include="Images\level\SuperMarioBrosMap1-1.png" />
     <Image Include="Images\test.bmp" />
+    <Image Include="Images\tile\DestructibleBlock.png" />
     <Image Include="Images\tile\PowBlock.png" />
   </ItemGroup>
   <ItemGroup>
@@ -203,7 +204,9 @@
     <Media Include="Music\Mario.mp3" />
     <Media Include="Music\MarioUnderworld.mp3" />
     <Media Include="Sound\contact_kill.wav" />
+    <Media Include="Sound\get_coin.mp3" />
     <Media Include="Sound\player_jump.mp3" />
+    <Media Include="Sound\pow.mp3" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
